# FLORA

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
docs/: memory_tool.md
examples/: 01_basic_agent.py  02_poet_critic.py  03_web_app.py  04_full_system.py  05_autonomous_coding_agent.py
src/forla/: __init__.py  _cancellation_token.py  _component_config.py  _hooks.py  _instructions.py  _middleware.py  _otel.py  compaction.py  context.py  messages.py  types.py
src/forla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/forla/agents/: __init__.py  _agent.py  _agent_as_tool.py  _base.py
src/forla/agents/_computer_use/: __init__.py  _computer_use.py  _interface_clients.py  _planning_models.py  _playwright_tools.py
src/forla/cli/: __init__.py  _main.py
src/forla/eval/: __init__.py  _analysis.py  _base.py  _config.py  _dataset.py  _middleware.py  _results.py  _runner.py  _targets.py
src/forla/eval/datasets/: __init__.py
src/forla/eval/examples/: __init__.py  basic_evaluation.py
src/forla/eval/judges/: __init__.py  _base.py  _composite.py  _llm.py  _llm_judge.py  _reference.py
src/forla/llm/: __init__.py  _anthropic.py  _azure_openai.py  _base.py  _openai.py
src/forla/memory/: __init__.py  _base.py  _chromadb.py  _list_memory.py
src/forla/middleware/: __init__.py  _base.py  _chain.py  _examples.py
src/forla/orchestration/: __init__.py  _ai.py  _ai_driven.py  _base.py  _handoff.py  _plan.py  _round_robin.py
src/forla/skills/code-review/: SKILL.md
src/forla/store/: __init__.py  _converters.py  _models.py  _store.py
src/forla/termination/: __init__.py  _base.py  _cancellation.py  _composite.py  _external.py  _function_call.py  _handoff.py  _implementations.py  _max_message.py  _text_mention.py  _timeout.py  _token_usage.py
src/forla/tools/: __init__.py  _base.py  _coding_tools.py  _context_tools.py  _core_tools.py  _decorator.py  _function_tool.py  _memory_tool.py  _research_tools.py
src/forla/tools/_mcp/: __init__.py  _client.py  _config.py  _integration.py  _tool.py  _transports.py
src/forla/webui/: __init__.py  _cli.py  _discovery.py  _eval_jobs.py  _eval_router.py  _execution.py  _models.py  _registry.py  _runs_router.py  _server.py  _session_store.py  _sessions.py
src/forla/webui/agent_framework_devui/ui/: index.html
src/forla/webui/agent_framework_devui/ui/assets/: index-BzhEszHZ.css  index-DByFJNGD.js
src/forla/webui/frontend/: index.html  package.json  plan.md  vite.config.ts
src/forla/webui/frontend/src/: App.tsx
src/forla/webui/frontend/src/components/agent/: agent-view.tsx
src/forla/webui/frontend/src/components/eval/: dataset-detail.tsx  dataset-panel.tsx  eval-run-detail.tsx  eval-runs-panel.tsx  target-panel.tsx
src/forla/webui/frontend/src/components/message_renderer/: ContentRenderer.tsx  types.ts
src/forla/webui/frontend/src/components/orchestrator/: orchestrator-view.tsx
src/forla/webui/frontend/src/components/runs/: run-detail.tsx  runs-view.tsx
src/forla/webui/frontend/src/components/shared/: app-header.tsx  chat-base.tsx  context-inspector.tsx  debug-panel.tsx  entity-selector.tsx  examples-gallery.tsx  session-switcher.tsx  tool-approval-banner.tsx
src/forla/webui/frontend/src/components/workflow/: workflow-view.tsx
src/forla/webui/frontend/src/hooks/: messageHandlers.ts  useEntityExecution.ts
src/forla/webui/frontend/src/services/: api.ts  eval-api.ts
src/forla/webui/frontend/src/types/: eval.ts  forla.ts  index.ts
src/forla/webui/frontend/src/utils/: message-utils.ts
src/forla/webui/ui/: index.html
src/forla/webui/ui/assets/: index-Z2td7MQ-.js
src/forla/workflow/: __init__.py  defaults.py  schema_utils.py
src/forla/workflow/core/: __init__.py  _builder.py  _checkpoint.py  _edge.py  _models.py  _runner.py  _step.py  _workflow.py
src/forla/workflow/steps/: __init__.py  _echo.py  _function.py  _http.py  _step.py  _transform.py  forla_agent.py
tests/: __init__.py  test_agent.py  test_agent_as_tool_strategies.py  test_agent_basic.py  test_benchmarks.py  test_computer_use_agent.py  test_context_compaction.py  test_context_tools.py  test_eval.py  test_hooks.py  test_llm.py  test_mcp_integration.py  test_memory_tool.py  test_middleware.py  test_model_clients.py  test_orchestration.py  test_orchestrator.py  test_otel.py  test_serialization.py  test_termination.py  test_tool_approval.py  test_tool_approval_simple.py  test_tools.py  test_types.py  test_workflow.py  test_workflow_progress.py
tests/webui/: __init__.py  test_cli.py  test_discovery.py  test_execution.py  test_registry.py  test_server.py  test_sessions.py  test_workflow_integration.py
tests/workflow/: __init__.py  conftest.py  test_checkpoint.py  test_workflow.py
