[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forla"
version = "0.1.0"
description = "A multi-agent framework built from first principles"
readme = "README.md"
requires-python = ">=3.11"

# CORE: The absolute minimum required to run a basic agent
# Notice how small this is — just 4 dependencies
dependencies = [
    "pydantic>=2.0.0",          # Type safety and serialization throughout
    "openai>=1.0.0",             # The default LLM provider
    "typing-extensions>=4.0.0",  # Backports for Python type hints
    "requests>=2.25.0",          # HTTP requests for tools
]

# OPTIONAL: Features are grouped so you install only what you need
# This is critical for an educational framework — don't force someone
# learning the agent loop to install Playwright (a browser automation library)
[project.optional-dependencies]
web   = ["fastapi>=0.100.0", "uvicorn>=0.20.0", "sse-starlette>=1.6.0"]
rag   = ["chromadb>=0.4.0", "sentence-transformers>=2.0.0"]
otel  = ["opentelemetry-sdk>=1.20.0", "opentelemetry-exporter-otlp-proto-http>=1.20.0"]
mcp   = ["mcp>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
all   = ["forla[web,rag,otel,mcp,anthropic]"]
dev   = ["forla[all]", "pytest>=7.0.0", "pytest-asyncio>=0.21.0", "mypy", "black", "isort"]

[tool.setuptools.packages.find]
where = ["src"]
